--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
 
     //解决方法数65536限制
     compile 'com.android.support:multidex:1.0.0'
+
+    compile "io.reactivex.rxjava2:rxjava:2.0.7"//Rxjava异步任务
+    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
 }
