--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
 
     compile "io.reactivex.rxjava2:rxjava:2.0.7"//Rxjava异步任务
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+
+    compile 'com.hejunlin.superindicatorlibray:superindicatorlibray:1.0.3'
 }
