--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
 
     compile 'com.hejunlin.superindicatorlibray:superindicatorlibray:1.0.3'
     compile 'cn.bingoogolapple:bga-adapter:1.2.0@aar'
+    compile 'cn.bingoogolapple:bga-refreshlayout:1.0.7@aar'
 }
