--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         applicationId "star.liuwen.com.le_shi"
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true // //解决方法数65536限制
     }
     buildTypes {
         release {
@@ -32,8 +33,7 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
 
     //解决方法数65536限制
-    compile 'com.android.support:multidex:1.0.0'
-
+    compile 'com.android.support:multidex:1.0.1'
     compile "io.reactivex.rxjava2:rxjava:2.0.7"//Rxjava异步任务
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
 
