--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,13 @@ dependencies {
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
     compile 'com.hejunlin.superindicatorlibray:superindicatorlibray:1.0.3'
     compile 'cn.bingoogolapple:bga-adapter:1.2.0@aar'
-    compile 'cn.bingoogolapple:bga-refreshlayout:1.0.7@aar'
     //动画库
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.nukc.stateview:library:1.2.1'
     //内存检测工具
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+
+    compile 'com.liaoinstan.springview:library:1.3.0'//下拉刷新和上拉加载控件
 
 }
