--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     compile "io.reactivex.rxjava2:rxjava:2.0.7"//Rxjava异步任务
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
     compile 'com.hejunlin.superindicatorlibray:superindicatorlibray:1.0.3'
-    compile 'cn.bingoogolapple:bga-adapter:1.2.0@aar'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.18'//万能适配器
+    compile 'cn.bingoogolapple:bga-adapter:1.2.0@aar'//万能适配器
     //动画库
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.nukc.stateview:library:1.2.1'
@@ -44,5 +45,4 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 
     compile 'com.liaoinstan.springview:library:1.3.0'//下拉刷新和上拉加载控件
-
 }
