增加新功能 添加浏览历史记录

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -116,5 +116,9 @@
             android:name=".Activity.ModifyActivity"
             android:launchMode="standard"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".Activity.WatchHistoryActivity"
+            android:launchMode="standard"
+            android:screenOrientation="portrait"/>
     </application>
 </manifest>
